Scale surface items by the buffer scale

As reported here [1] with a compositor that properly
handles HiDPI, surface item size is not scaled at all
resulting in windows twice the size on Retina.

Issue: #190
Issue: #218

[1] = https://bugreports.qt.io/browse/QTBUG-55303